# c11threads

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  c11threads.h  c11threads.vcxproj  c11threads.vcxproj.filters  c11threads_win32.c  test.c
.github/workflows/: freebsd.yml  gnulinux.yml  macosx.yml  win_msvc.yml
include/: c11threads.h
test/: Makefile  Makefile.msvc  c11threads.vcxproj  c11threads.vcxproj.filters
visual_studio/: .gitignore  c11threads.sln  c11threads.vcxproj  c11threads.vcxproj.filters
